# ska-mid-dish-b5dc-proxy

./: .gitlab-ci.yml  .readthedocs.yaml  .release  CHANGELOG.rst  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml
charts/ska-mid-dish-b5dc-proxy/: Chart.yaml  values.yaml
charts/ska-mid-dish-b5dc-proxy/data/: b5dc_manager.yaml  b5dc_proxy.yaml
charts/ska-mid-dish-b5dc-proxy/templates/: deviceservers.yaml
docs/src/: conf.py  index.rst
docs/src/api/: b5dc_device.yaml  index.rst
src/ska_mid_dish_b5dc_manager/: b5dc_cm.py  b5dc_manager.py
src/ska_mid_dish_b5dc_proxy/: B5dc_cm.py  B5dc_ds.py  __init__.py  b5dc_cm.py  b5dc_manager.py  b5dc_proxy.py
src/ska_mid_dish_b5dc_proxy/models/: __init__.py  constants.py  data_classes.py
tests/: __init__.py  conftest.py  utils.py
tests/acceptance/: test_attr_event_configuration.py  test_attr_events.py  test_attributes_read_only.py  test_commands.py  test_dummy.py
tests/unit/: __init__.py  test_ska_mid_dish_b5dc_proxy.py
tests/unit/component_manager/: conftest.py  test_b5dc_commands.py  test_component_manager.py  test_set_frequency_unhappy_path.py
tests/unit/interface/: __init__.py  conftest.py  test_attributes.py
